--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@ body {
     font-size: 18px;
     line-height: 34px;
     color: #777777;
-    background: url("../images/concrete_seamless.png");
+    /* background: url("../images/concrete_seamless.png"); */
+    color: white;
+    background-image: linear-gradient(#343a40, #00564D);
   }
   
   * {
@@ -33,9 +35,9 @@ body {
   h1,
   h2,
   h3 {
-    font-family: Georgia, Times, "Times New Roman", serif;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: 700;
-    color: #4aaaa5;
+    color: white;
   }
   
   h1 {
@@ -59,7 +61,7 @@ body {
     margin: 0 0 30px;
     overflow: auto;
     color: #ffffff;
-    background: #ffffff;
+    background: #343a40;
     border-bottom: 2px solid #cccccc;
   }
   
@@ -129,7 +131,7 @@ body {
     max-width: 960px;
     padding: 30px;
     margin: 0 0 40px;
-    background: #ffffff;
+    background-color:#343a40;
     border: 1px solid #dddddd;
   }
   
