--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ body {
     position: relative;
     float: left;
     width: 274px;
-    margin: 20px 0 25px;
+    margin: 20px 25px;
     overflow: auto;
   }
   
